feat : 닉네임 중복 확인 API 구현
