# swagger/swagger.yml
@@ -137,3 +137,46 @@ paths:
                     type: integer
                   message:
                     type: string
+  /api/v1/auth/check:
+    get:
+      summary: 닉네임 중복 확인
+      tags:
+        - Auth
+      parameters:
+        - in: query
+          name: nickname
+          required: true
+          schema:
+            type: string
+          description: 확인할 닉네임
+      responses:
+        "200":
+          description: 닉네임 중복 확인 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    properties:
+                      isAvailable:
+                        type: boolean
+                        description: 닉네임 사용 가능 여부 (`true` = 사용 가능, `false` = 사용 불가)
+        "500":
+          description: 서버 내부 오류
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  statusCode:
+                    type: integer
+                  message:
+                    type: string
